Fix text selection still possible on mobile Chrome
- Add -moz-user-select, -ms-user-select for full vendor coverage
- Add -webkit-touch-callout: none to block long-press callout on iOS/Android
- Add -webkit-tap-highlight-color: transparent to remove tap highlight
- Add JS-level selectstart and contextmenu event prevention as fallback

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,11 @@
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
